--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 wheel
-torch==2.1.2
-torchvision==0.16.2
+torch>=2.5.0
+torchvision>=0.20.0
 transformers==4.39.3
 accelerate==0.30.0
 diffusers>=0.30.1
-numpy==1.24.4
+numpy==1.26.4
 einops
 ftfy
 ipython
