--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,10 @@ torchmetrics
 tiktoken
 jsonlines
 tensorboardX
+
+# Added dependencies for app_api.py
+fastapi>=0.95.0
+uvicorn>=0.22.0
+celery>=5.3.4
+huggingface_hub
+requests
