--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ scikit-image
 sentencepiece
 spacy==3.7.5
 streamlit
-timm==0.6.12
+timm==1.0.11
 tqdm
 torchmetrics
 tiktoken
@@ -35,3 +35,4 @@ celery
 redis
 requests
 pydantic
+honcho==1.0.1
